2009-08-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Look for base methods
	  in interfaces as well.

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Yet another
	  blacklisted element (SW.dll is not linked).

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Blacklist
	  more stuff.

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Blacklist
	  our bridge.

2009-08-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Move FIXME to a better
	  place. Fix NRE.

2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Don't use var.
	Remove debug spew.

2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: Make an enum
	  and a method protected.

	* Mono.Tuner/MoonlightA11yProcessor.cs: Prevent
	  Type*Exceptions because of badly placed SC attrib on
	  methods.

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Typo in
	  comment.

2009-07-02  Jb Evain  <jbevain@novell.com>

	* Makefile: fix cecil's location.

2009-06-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: GLibSharp uses
	  Activator.CreateInstance for *Adapter classes, so we need to
	  have an exception here for these ctors (to avoid
	  MissingMethodExceptions).

2009-06-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: Typo.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj:
	* Mono.Tuner.dll.sources: Update.
