@@ -1,3 +1,14 @@
+2009-08-13  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* Mono.Tuner/MoonlightA11yProcessor.cs: Don't whitelist SC
+	  attribs for base methods that are on our assembly.
+	This finally makes a11y work without security disabled. The
+	  summary of the troubles encountered:
+	- GetHashCode() -> base method not SC. (r139589+r139649)
+	- Dispose() -> interface method not SC. (r139796)
+	- get_Handle() -> interface method SC while impl not SC. (this
+	  commit)
+
 2009-08-12  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
 	* Mono.Tuner/MoonlightA11yProcessor.cs: Look for base methods
